--- a/ch01.md
+++ b/ch01.md
@@ -525,7 +525,11 @@
 
 * 송호준: 그럼 예를 들어 5대 양 6대 주니까 5개의 코인만 발행하겠다고 했어요. 어떻게 발행해요?
 
-* 이태호: 5개를 (2:47:09)하면 발행하게 되는 거죠. (2:47:14~2:47:23 이 부분은 오디오가 너무 겹쳐서 잘 안 들립니다)
+* 이태호: 5개를 민팅하면 발행하게 되는 거죠.
+
+* 김동환: 그래서 발행은 프로그램할 처음에 5개라고 시작하면 발행이에요.
+
+* 송호준: Init 하잖아.
 
 * 김동환: 발행하잖아요. 발행 기념으로 아버지께 다 드리고 싶어서 아버지한테 딱 쏴요.
 
@@ -731,7 +735,7 @@
 
 * 송호준: 요트에서는 바람으로만 움직이면 되고 현재 요트를 타는 사람들이 300 와트 태양광 패널 2개와 인산철 배터리 14.4 키로 와트로 살고 있어요. 그리고 48 볼트로 충전하고 천만 원 정도의 돈으로 엔진도 모터로 바꾸고 전기로 움직일 수 있는 상황이 됐어요. 그러면 코인을 채굴한다는 게 되게 비효율적인 것도 있는데 이더리움도 마찬가지잖아요. 풀어야 하잖아요. 그러면 지금 사람들이 제일 많이 이야기하는 게 코인이 너무 친환경적이지 않다. 전기를 너무 많이 쓴다 이게 가장 큰 이슈잖아요. 그래서 우리가 이렇게 이야기하게 된 것도 그 부분인데 많이 쓰든 적게 쓰든 결과적으로 코인이나 암호화폐 관련된 게 환경과 멀어지게 되잖아요. 그래서 배터리도 완전 친환경적이진 않지만 다른 것보다 더 친환경적이라고 했을 때 결국은 이걸 팔거나 부가가치가 있어야만 친환경적인 게 부가가치가 있다고 말을 할 수 있잖아요. 그래서 그런 것들의 가치를 어떻게 더 높게 상정할 수 있을까요? 태양광으로 채굴을 한 코인이라는 게 더 가치가 있을 수 있나요?
 
-* 이태호: 거기서 중점적으로 봐야 할 부분은 전기 사용량이 코인의 가치라고 생각할 수도 있는데 코인을 마이닝 한다고 했을 때는 장비를 들여놓는 것 자체부터 시작해야 할 것 같아요. 코인을 생각하지 않았으면 마이닝 장비가 없었을 수 있잖아요. 그럼 그거 플러스 마이닝하는 전력을 생각했을 때 소위 말하는 코인 NPP(3:35:20-NPP라고 들리는데 정확하지 않아서 표시합니다) 같은 걸 넘어서냐 안 넘어서냐를 봐야 할 것 같아요. 그러고 나서 그게 효율적이냐를 볼 때는 예를 들어 에탄올로 가는 자동차가 있잖아요. 그런데 에탄올을 만들기 위해서는 보통 고무나 옥수수를 쓰는데 에탄올을 1L 만들려면 기름 1L가 들어가요. 이게 무슨 상황이냐는 거죠. 그렇게 논리를 따져보면 그런 것도 고려해서 충분한 타당성이 있다고 할 때 가치가 있을 것 같아요. 마이닝 프로세스를 돌려서 환경에 도움이 될 만한 가치를 만들어내는 게 도움이 될 수 있고요. 이건 약간 소설 같기는 하지만 아까 해조류 이야기했었잖아요. 해조류가 자라는 속도가 좀만 맞으면 진짜 빨라요. 만약 그 해조류의 그런 파워를 오라클 같은 걸로 판단할 수 있다면 그걸 통해서 가늠할 수 있는 부분들이 있을 거 아니에요. 그런데 이건 스마트 컨트랙트로 딱 만들어지지 않는 부분이라 좀 애매하긴 하죠. 그렇지만 실험적으로 한 사람들이 있었어요. 그러니까 스마트 컨트랙트라는 게 블록체인의 어떤 팩트를 기록하면서 이걸 가치로 변환하는 과정인데 예를 들어 페트병 몇 개를 주웠다, 솔라셀을 어떻게 했다고 기록하면서 진행할 수 있는 거죠. 블록체인 초기 모델에서 실험적으로는 그렇게 진행된 경우가 있었어요. 이건 어떻게 보면 이더리움 레벨에서가 아니라 우리 동네, 우리 시에서 운영하는 재래시장 코인과 비슷하게 누구나 다 인정할 수 있는 범위에서 리워드를 주는 걸 토크나이징해서 그것들을 가지고 쓸 수 있는 거죠. 물론 마이닝하는 그런 코인은 아니지만요. 그런 식으로 어프로치할 수 있고 마이닝하는 코인의 거래소 내지는 스왑에 관한 컨트롤이 만들어지면 충분히 환경적으로 노력하는 부분이 번역되어 기존 인프라로 들어오면서 선순환 구조를 만들 수 있을 것 같아요. 그런데 이 부분은 서로 이해타산이 맞아야 하고 다 동감해야 하는 부분이 있어서 그게 조금 힘들죠. 모두가 서로를 그렇게 신뢰하지 않는 상황에서는 마이닝하는 게 첫 번째 옵션으로 거론될 수 있고 그런 환경에서는 얼마나 더 효율적으로 이런 작업을 할 수 있느냐를 생각해봐야 하는데 예를 들어 김 양식장처럼 솔라 패널을 위에 쫙 다는 거예요. 그럼 이제 요트가 그걸 끌고 다니는 거예요. 아까 300 와트 얘기하셨는데 그걸 이열종대로 한 5~10개를 끌고 다닌다 했을 때 엄청난 전기를 생산할 수 있잖아요. 그런데 여기서 솔라 패널을 김 양식장처럼 막 깔았을 때 그 밑에서 햇빛을 못 받아서 말라가는 애들이 있을 수도 있으니 이게 친환경적인지 아닌지 이런 논지는 있을 것 같아요. 그런 것들을 세밀하게 고려해서 의미가 있는 거라고 하면 진행하는 게 좋을 것 같아요.
+* 이태호: 거기서 중점적으로 봐야 할 부분은 전기 사용량이 코인의 가치라고 생각할 수도 있는데 코인을 마이닝 한다고 했을 때는 장비를 들여놓는 것 자체부터 시작해야 할 것 같아요. 코인을 생각하지 않았으면 마이닝 장비가 없었을 수 있잖아요. 그럼 그거 플러스 마이닝하는 전력을 생각했을 때 소위 말하는 코인이 BEP(손익분기점) 같은 걸 넘어서냐 안 넘어서냐를 봐야 할 것 같아요. 그러고 나서 그게 효율적이냐를 볼 때는 예를 들어 에탄올로 가는 자동차가 있잖아요. 그런데 에탄올을 만들기 위해서는 보통 고무나 옥수수를 쓰는데 에탄올을 1L 만들려면 기름 1L가 들어가요. 이게 무슨 상황이냐는 거죠. 그렇게 논리를 따져보면 그런 것도 고려해서 충분한 타당성이 있다고 할 때 가치가 있을 것 같아요. 마이닝 프로세스를 돌려서 환경에 도움이 될 만한 가치를 만들어내는 게 도움이 될 수 있고요. 이건 약간 소설 같기는 하지만 아까 해조류 이야기했었잖아요. 해조류가 자라는 속도가 좀만 맞으면 진짜 빨라요. 만약 그 해조류의 그런 파워를 오라클 같은 걸로 판단할 수 있다면 그걸 통해서 가늠할 수 있는 부분들이 있을 거 아니에요. 그런데 이건 스마트 컨트랙트로 딱 만들어지지 않는 부분이라 좀 애매하긴 하죠. 그렇지만 실험적으로 한 사람들이 있었어요. 그러니까 스마트 컨트랙트라는 게 블록체인의 어떤 팩트를 기록하면서 이걸 가치로 변환하는 과정인데 예를 들어 페트병 몇 개를 주웠다, 솔라셀을 어떻게 했다고 기록하면서 진행할 수 있는 거죠. 블록체인 초기 모델에서 실험적으로는 그렇게 진행된 경우가 있었어요. 이건 어떻게 보면 이더리움 레벨에서가 아니라 우리 동네, 우리 시에서 운영하는 재래시장 코인과 비슷하게 누구나 다 인정할 수 있는 범위에서 리워드를 주는 걸 토크나이징해서 그것들을 가지고 쓸 수 있는 거죠. 물론 마이닝하는 그런 코인은 아니지만요. 그런 식으로 어프로치할 수 있고 마이닝하는 코인의 거래소 내지는 스왑에 관한 컨트롤이 만들어지면 충분히 환경적으로 노력하는 부분이 번역되어 기존 인프라로 들어오면서 선순환 구조를 만들 수 있을 것 같아요. 그런데 이 부분은 서로 이해타산이 맞아야 하고 다 동감해야 하는 부분이 있어서 그게 조금 힘들죠. 모두가 서로를 그렇게 신뢰하지 않는 상황에서는 마이닝하는 게 첫 번째 옵션으로 거론될 수 있고 그런 환경에서는 얼마나 더 효율적으로 이런 작업을 할 수 있느냐를 생각해봐야 하는데 예를 들어 김 양식장처럼 솔라 패널을 위에 쫙 다는 거예요. 그럼 이제 요트가 그걸 끌고 다니는 거예요. 아까 300 와트 얘기하셨는데 그걸 이열종대로 한 5~10개를 끌고 다닌다 했을 때 엄청난 전기를 생산할 수 있잖아요. 그런데 여기서 솔라 패널을 김 양식장처럼 막 깔았을 때 그 밑에서 햇빛을 못 받아서 말라가는 애들이 있을 수도 있으니 이게 친환경적인지 아닌지 이런 논지는 있을 것 같아요. 그런 것들을 세밀하게 고려해서 의미가 있는 거라고 하면 진행하는 게 좋을 것 같아요.
 
 * 송호준: 그러면 저는 궁금한 게 그런 것들을 발행할 때 기록을 남길 수 있냐는 거죠. 이걸 스마트 컨트랙트에 쓸 건지 아니면 예를 들어 태양광을 3개월 정도 가지고 탄소를 가장 덜 배출하고 깨끗한 상황이라고 증명을 한 상태에서 코인을 발행하면 이건 무슨 친환경 코인인 것처럼 인증할 수 있냐는 거죠. 그런 구조를 만들 수 있냐는 거죠. 
 
@@ -775,7 +779,7 @@
 
 * 여병상: 제가 어떤 지식과 정보를 구분하는 걸 되게 좋아하거든요. 데이터, 인포메이션, 놀리지, 위즈덤 이렇게 네 개가 있는데 지금 얘기하는 건 대부분 위즈덤이나 인포메이션이고 인터넷을 찾아보면 다 데이터밖에 없는 거예요. 그래서 위즈덤까지 가려면 중간에 우리가 알고 있는 암묵적 지식이 있잖아요. 네트워크 이팩트가 중요하지 않아요. 아직은 증명되지 않은 얘기죠. 아니면 탄소 배출권으로 연결해야 할 것 같아요. 그런 것들이 모이면 이팩트가 생겨서 위즈덤 까지 가는 거죠.
 
-* 이태호: 그럴 것 같아요. 저도 그런 포인트에서 논의하고 싶었던 주제는 암호화 체계에서 비트코인과 이더리움이 같은 체계를 쓰고 있거든요. 그 체계에 해당하는 알고리즘을 들고 새로운 코인 체계를 만드는 것도 가능할 수 있는데 그걸 누구나 신뢰할 수 있는 네트워크에 올리거나 누구나 신뢰할 수 있는 디바이스로 만들 수 있을 것 같아요. 여기서 말하는 디바이스는 제가 주로 인증할 때 쓰는 (3:55:59) 키가 있는데 그게 똑같은 알고리즘으로 인증을 해요. 그런데 그 키를 가지고 있다 해서 서버에 그 키를 등록하는 건 아니거든요. 그건 자기가 프라이빗 키를 가지고 있고 인증할 때만 쓰기 때문에 마이닝 같은 이슈도 없어요. 그래서 그런 데에 이런 블록체인 정보를 잘 엮으면 되지 않을까 싶어요.
+* 이태호: 그럴 것 같아요. 저도 그런 포인트에서 논의하고 싶었던 주제는 암호화 체계에서 비트코인과 이더리움이 같은 체계를 쓰고 있거든요. 그 체계에 해당하는 알고리즘을 들고 새로운 코인 체계를 만드는 것도 가능할 수 있는데 그걸 누구나 신뢰할 수 있는 네트워크에 올리거나 누구나 신뢰할 수 있는 디바이스로 만들 수 있을 것 같아요. 여기서 말하는 디바이스는 제가 주로 인증할 때 쓰는 utf? (otp) 키가 있는데 그게 똑같은 알고리즘으로 인증을 해요. 그런데 그 키를 가지고 있다 해서 서버에 그 키를 등록하는 건 아니거든요. 그건 자기가 프라이빗 키를 가지고 있고 인증할 때만 쓰기 때문에 마이닝 같은 이슈도 없어요. 그래서 그런 데에 이런 블록체인 정보를 잘 엮으면 되지 않을까 싶어요.
 
 * 여병상: 제가 요즘 관심 있던 책들이 뭐냐면 정치와 경제 트렌드가 나중에 50년, 100년 후에도 이런 트렌드일까 이런 내용인데 사실 민주주의가 생긴 지 얼마 안 됐잖아요. 그런데 토큰, 코인을 공부해보니까 공산주의 이념과 되게 유사한 거예요. 아이러니하게 코인을 활성화시킨 건 자본주의의 욕심 때문인데 실제 철학을 보면 공산주의와 유사하거든요. 공산주의 백서도 있잖아요. 그래서 공산당 선언과 스탈린의 책들을 보면 그때 비트코인이 있었다면 엄청나게 잘 됐을 것 같아요.
 
