--- a/ch01.md
+++ b/ch01.md
@@ -1,3 +1,19 @@
+* (자막) 이미영: 어제브터 바다 위에서 생방송 세팅을 위해 요트에 LTE 중계기도 설치하고 테스트도 했습니다만, 지금 바람이 불면서 잠시 인터넷 상황이 좋지 않습니다. 빠르게 문제해결하고 있습니다. 잠시만 기다려주세요. 
+
+* (댓글참여): 육지를 떠나 살기가 쉽지는 않겠죠 ㅎㅎ
+
+* (자막) 이미영: 파도에 계속 흔들리는 
+
+* (바다) 송호준: 드디어 시작됐네요. 지금 우리가 요트로 다가가고 있습니다. 안녕하십니까 여러분, 저는 송호준입니다. 오늘 많은 분들과 함께 재미난 이야기를 하게 될것 같아서 기대가 됩니다. 파도가 조금 있어서 천천히 배로 접근하고 있는 중입니다. 조금만 기다려주십시요. 으이쌰. 들어오십시요. 선장님 소개해드리겠습니다. 
+
+* (바다) 여병상: 안녕하세요. 여병상 선장입니다. 반갑습니다. 
+
+* (바다) 송호준: 들어가시죠~ 으이쌰~ 안녕하세요. 왔습니다~~~ 아이고 또 배타다가 신발이 빠져가지구. (ㅎㅎㅎㅎㅎㅎㅎㅎㅎ) 아이고. 반갑습니다. 카메라 설치되는 동안 잠시.. 어제오늘 많은 일들이 있었어가지고 ㅎㅎㅎㅎ 쉽지가 않네... 
+
+* 마이크도 
+
+-----
+
 * 송호준: 네, 사실 이제 말도 많고 탈도 많은 코인 이야기라 사람들이 투기나 투자에 관련된 이야기를 하는 게 아니냐고 많이 물어보시는데요. 그런데 저희 같은 경우에는 오늘 방송하기 전부터도 계속 밤마다 이야기를 나눴었는데요. 만약 육지를 떠나서 바다에서 살게 된다면 새로운 대안 경제 체제는 무엇으로 가져갈 수 있을지 생각해봤을 때, 지금 코인의 여러 가지 가치들이 충분한 대안이 될 수 있을 것 같습니다. 바다를 사랑하는 입장에서 그런 것들을 유지할 수 있는 방식을 찾아보자는 겁니다. 경제적인 활동과 환경적인 활동을 서로 배타적인 것으로 생각하지 않아야 지속 가능한, 누구나 할 수 있는 환경운동을 할 수 있지 않을까 생각합니다. 이런 측면에서도 코인에 대한 이야기를 끌어들이는 것이기 때문에 크게 우려하시지 않으셨으면 하는 바람입니다.
 
 * 이미영: 왜 요트에서 환경 이야기를 하는지에 대해 얘기를 해주시면 좋을 것 같습니다.
